-Reduce image size

--- a/weather/Base.lproj/LaunchScreen.storyboard
+++ b/weather/Base.lproj/LaunchScreen.storyboard
@@ -33,11 +33,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="clear_sunrise" width="3456" height="5184"/>
+        <image name="clear_sunrise" width="683" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
